k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ncert10-quiz-svc
  namespace: ncert10-quiz
  labels:
    app.kubernetes.io/name: ncert10-quiz
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ncert10-quiz
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
      protocol: TCP
